--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,13 @@ addons:
    - ubuntu-toolchain-r-test
   packages:
    - g++-4.8
-install:
+before_install:
+ cd BusDriveApp
+ install:
  - npm install -g gulp
  - npm install -g cordova
  - npm install -g ionic@beta
-before_script:
- cd BusDriveApp
+
 script: 
  gulpfile.js
  karma.conf.js
