--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,15 @@ addons:
 before_install:
  cd BusDriveApp
 install:
+ - npm install -g karma
+ - npm install -g jasmine
  #- npm install -g gulp
  #- npm install -g cordova
  #- npm install -g ionic@beta
 
 script: 
- gulpfile.js
- karma.conf.js
+ -gulpfile.js
+ #-karma.conf.js
 
 after_success:
  - coveralls
