--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 install:
  - npm install -g karma
  - npm install -g jasmine
- #- npm install -g gulp
+ - npm install -g gulp
  #- npm install -g cordova
  #- npm install -g ionic@beta
 
