--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,17 @@ cache:
   - BusDriveApp/node_modules
 
 before_install:
+ - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
  cd BusDriveApp
 install:
- - npm install karma
- - npm install jasmine
+ - npm install gulp
+ #- npm install karma
+ #- npm install jasmine
  - npm install cordova
  - npm install ionic@beta
- - npm install gulp
-  
+ - npm install 
 script: 
  - ../scripts/travisbuilt.sh
- 
 after_script:
  - cat ./test/reports/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 after_success:
