--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ addons:
 cache:
   directories:
   - BusDriveApp/node_modules
+  - BusDriveApp/platforms
+  - BusDriveApp/plugins
 
 before_install:
  - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
