--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ before_install:
 install:
  - cd BusDriveApp
  - npm install gulp
- #- npm install karma
- #- npm install jasmine
+ - npm install karma
+ - npm install jasmine
  - npm install cordova
  - npm install ionic@beta
  - npm install 
