--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,12 @@ before_install:
  - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
 install:
  - cd BusDriveApp
- - npm install gulp
- - npm install karma
- - npm install jasmine
- - npm install cordova
- - npm install ionic@beta
- - npm install 
+ #- npm install gulp
+ #- npm install karma
+ #- npm install jasmine
+ #- npm install cordova
+ #- npm install ionic@beta
+ #- npm install 
 script: 
  - ../scripts/travisbuilt.sh
 after_script:
