--- a/BusDriveApp/package.json
+++ b/BusDriveApp/package.json
@@ -17,6 +17,7 @@
     "ionic-gulp-html-copy": "^1.0.0",
     "ionic-gulp-sass-build": "^1.0.0",
     "ionic-gulp-scripts-copy": "^1.0.1",
+    "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-browserify": "^5.0.5",
     "karma-firefox-launcher": "^1.0.0",
