--- a/.travis.yml
+++ b/.travis.yml
@@ -22,17 +22,17 @@ before_install:
  - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
 install:
  - cd BusDriveApp
- - npm install gulp
- - npm install karma
- - npm install jasmine
- #- npm install cordova
- #- npm install ionic@beta
- #- npm install 
+ - npm install -g gulp
+ #- npm install karma
+ #- npm install jasmine
+ - npm install -g cordova
+ - npm install -g ionic@beta
+ - npm install 
 script: 
  - gulp test
 after_script:
  - cat ./test/reports/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
-after_success:
- - coveralls
-deploy:
- skip_cleanup: true
+#after_success:
+# - coveralls
+#deploy:
+# skip_cleanup: true
