--- a/BusDriveApp/package.json
+++ b/BusDriveApp/package.json
@@ -22,6 +22,8 @@
     "karma-browserify": "^5.0.5",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.7",
     "run-sequence": "1.1.5",
     "watchify": "^3.7.0"
   },
