#12subissueKarma/travis_change

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_install:
 install:
  - cd BusDriveApp
  - npm install gulp
+ - npm install gulp-watch
  - npm install karma
  - npm install jasmine
  #- npm install cordova
