#12 karma now properly runs the 2 test specs with phantomjs

--- a/BusDriveApp/package.json
+++ b/BusDriveApp/package.json
@@ -25,6 +25,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "phantomjs-prebuilt": "^2.1.7",
     "run-sequence": "1.1.5",
+    "traceur": "0.0.110",
     "watchify": "^3.7.0"
   },
   "name": "busdriveapp",
