#30 : transfered post command from TabsPage to Service, added new post command and changed interfaces

--- a/BusDriveApp/package.json
+++ b/BusDriveApp/package.json
@@ -25,13 +25,14 @@
     "watchify": "^3.7.0"
   },
   "name": "busdriveapp",
-  "description": "BusDriveApp: An Ionic project",
+  "description": "BusDriveApp",
   "cordovaPlugins": [
     "cordova-plugin-device",
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
+    "cordova-plugin-geolocation",
     "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": []
