--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
  - npm install -g cordova
  - npm install -g ionic@beta
  - npm install
-after_install:
+before_script:
  - cd BusDriveApp 
 script: 
  - gulp test #nur verkürzung von - ../scripts/travisbuilt.sh da gulp test dort auch ausgeführt wird
