--- a/BusDriveApp/package.json
+++ b/BusDriveApp/package.json
@@ -15,7 +15,6 @@
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12"
   },
-  
   "devDependencies": {
     "browserify": "^13.0.1",
     "del": "2.2.0",
@@ -42,7 +41,9 @@
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
     "cordova-plugin-geolocation",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-inappbrowser",
+    "cordova-plugin-appavailability"
   ],
   "cordovaPlatforms": []
 }
