#38 : added AboutPage, small changes in "app.ts/html", new plugins, new APK
ToDo: settings

--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
     "cordova-plugin-geolocation",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-inappbrowser",
+    "cordova-plugin-appavailability"
   ],
   "cordovaPlatforms": []
 }
