#12 merged changes from #12subissueKarma to develop

--- a/BusDriveApp/package.json
+++ b/BusDriveApp/package.json
@@ -25,11 +25,16 @@
     "ionic-gulp-html-copy": "^1.0.0",
     "ionic-gulp-sass-build": "^1.0.0",
     "ionic-gulp-scripts-copy": "^2.0.0",
+    "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-browserify": "^5.0.5",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.7",
     "run-sequence": "1.1.5",
+    "traceur": "0.0.110",
     "watchify": "^3.7.0"
   },
   "name": "busdriveapp",
