--- a/BusDriveApp/package.json
+++ b/BusDriveApp/package.json
@@ -8,8 +8,8 @@
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
     "@angular/router": "^2.0.0-rc.1",
     "es6-shim": "^0.35.0",
-    "ionic-angular": "2.0.0-beta.7",
-    "ionic-native": "^1.1.0",
+    "ionic-angular": "2.0.0-beta.8",
+    "ionic-native": "^1.2.4",
     "ionicons": "3.0.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
@@ -49,7 +49,14 @@
     "cordova-plugin-geolocation",
     "ionic-plugin-keyboard",
     "cordova-plugin-inappbrowser",
-    "cordova-plugin-appavailability"
+    "cordova-plugin-appavailability",
+    {
+      "variables": {
+        "API_KEY_FOR_ANDROID": "AIzaSyBuoI32XuVQR3B5e1F1Or4TQ0LA4739oSQ"
+      },
+      "locator": "cordova-plugin-googlemaps",
+      "id": "plugin.google.maps"
+    }
   ],
   "cordovaPlatforms": []
 }
