#54 : added Insomnia to prevent the screen from falling asleep #55 : added notification, added route o a customstop
ToDo: how only accepted custom stops on MapPage

--- a/BusDriveApp/package.json
+++ b/BusDriveApp/package.json
@@ -56,7 +56,9 @@
       },
       "locator": "cordova-plugin-googlemaps",
       "id": "plugin.google.maps"
-    }
+    },
+    "de.appplant.cordova.plugin.local-notification",
+    "cordova-plugin-insomnia"
   ],
   "cordovaPlatforms": []
 }
